syntax = "proto3";

package echo;

message EchoRequest {
  string message = 1;
}

message EchoStreamRequest {
  string message = 1;
  int32 repeat = 2;
}

message EchoResponse {
  string message = 1;
  int64 timestamp = 2;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc EchoStream(EchoStreamRequest) returns (stream EchoResponse);
}
